feat(llm_observability): add PostgreSQL version configuration for Langfuse
- Add langfuse_postgres_version variable (pinned to "17" in defaults)
- Pass POSTGRES_VERSION environment variable to Langfuse docker compose
- Enables explicit PostgreSQL version control for Langfuse observability stack

This ensures consistent PostgreSQL version across deployments and allows
for version-specific compatibility tuning.

--- a/roles/llm_observability/defaults/main.yml
+++ b/roles/llm_observability/defaults/main.yml
@@ -1,3 +1,4 @@
 ---
 # defaults file for llm_observability
 llm_base_config_path: "{{ config_root }}" # Base path for configuration files
+langfuse_postgres_version: "17" # PostgreSQL version for Langfuse (pinned to 15 for compatibility)
