--- a/roles/llm_tools/defaults/main.yml
+++ b/roles/llm_tools/defaults/main.yml
@@ -26,5 +26,5 @@ ollama_base_url_for_webui: "http://{{ ollama_host }}:{{ ollama_port }}"
 # --- Google Workspace MCP Settings ---
 google_workspace_mcp_image: "ghcr.io/astral-sh/uv:debian"
 google_workspace_mcp_container_name: "google-workspace-mcp"
-google_workspace_mcp_port_host: 8014
+google_workspace_mcp_port_host: "{{ google_workspace_mcp_port_host | default(8014) }}"
 google_workspace_mcp_port_container: 8000
