fix: update daniels-mac MAC address for DHCP reservation
Correct the MAC address entry in static_dhcp configuration to match
the actual WiFi interface MAC address.

Before: BC:D0:74:27:D9:8F
After:  e6:d8:be:f9:04:b6

This ensures proper fixed IP assignment (192.168.50.90) via Pi-hole DHCP.

--- a/group_vars/all/dhcp.yml
+++ b/group_vars/all/dhcp.yml
@@ -158,7 +158,7 @@ static_dhcp:
     mac: CC:B5:D1:6A:45:8F
     ip_suffix: 81
   daniels-mac:
-    mac: BC:D0:74:27:D9:8F
+    mac: e6:d8:be:f9:04:b6
     ip_suffix: 90
   p1s-1:
     mac: C0:4E:30:06:C3:54
