feat(llm_inference): increase context size to 92,375 tokens and add service entry
- Update context size from 80,000 to 92,375 tokens (15.5% increase)
- Maximum stable context that fits in RTX 3090 24GB VRAM
- Add llama-swap service entry for service discovery
- Tested up to 92,375, OOM at 92,500+

Refs: MAX_CONTEXT_92K

--- a/group_vars/all/services.yml
+++ b/group_vars/all/services.yml
@@ -186,6 +186,13 @@ services:
     wol: "{{ ailab_mac_address }}"
     tls_skip: true
     try: 360s
+  llama-swap:
+    name: LlamaSwap
+    target: ailab-ubuntu.lan
+    http_port: 9292
+    group: AI
+    wol: "{{ ailab_mac_address }}"
+    try: 360s
   comfyui:
     name: ComfyUI
     target: ailab-ubuntu.lan
