feat(llm_inference): add homepage labels to llama-swap container
- Add homepage.group, homepage.name, homepage.href
- Add homepage.icon, homepage.server, homepage.container
- Enables LlamaSwap to appear in Homepage dashboard
- Follows same pattern as other service containers

--- a/roles/llm_inference/tasks/main.yml
+++ b/roles/llm_inference/tasks/main.yml
@@ -52,4 +52,11 @@
           - [gpu]
     env:
       LLAMASWAP_RESTART_TOKEN: "{{ ansible_facts.date_time.epoch }}"
+    labels:
+      homepage.group: "{{ services['llama-swap'].group }}"
+      homepage.name: "{{ services['llama-swap'].name }}"
+      homepage.href: "https://llama-swap.lan"
+      homepage.icon: llama.png
+      homepage.server: "{{ inventory_hostname }}"
+      homepage.container: "{{ llamaswap_container_name }}"
   become: true
