--- a/setup.yml
+++ b/setup.yml
@@ -11,6 +11,7 @@
     - { role: dockerproxy, become: true, tags: [docker, dockerproxy, portainer] }
     - { role: portainer, become: true, tags: [docker, portainer] }
     - { role: glances, become: true, tags: [glances] }
+    - { role: zfs, become: true, tags: [zfs, storage] }
     - { role: storage, become: true, tags: [storage] }
     - { role: caddy, become: true, tags: [caddy] }
     - { role: trust_internal_ca, become: true, tags: [caddy, ca] }
