--- a/group_vars/all/config.yml
+++ b/group_vars/all/config.yml
@@ -45,7 +45,7 @@ llamaswap_port: 9292 # llama-swap API port
 llamaswap_container_name: llama-swap
 llamaswap_config_path: "{{ config_root }}/llama-swap"
 model_group_alias:
-  home: "Qwen3-30B-A3B-Instruct-2507"
+  home: "Qwen3-VL-8B-Instruct"
 llamaswap_models:
   - alias: Qwen3-VL-8B-Instruct
     cmd: >-
