feat(wyoming-openai): add dual-gateway support for separate TTS backends
Implement dual Wyoming OpenAI gateways:
- Gateway 1 (port 10300): SPEACHES for STT and TTS (Piper/Kokoro)
- Gateway 2 (port 10301): Chatterbox for TTS only (multilingual)

This enables Home Assistant to have two separate voice assistant pipelines,
allowing different voices for different use cases.

Changes:
- Add wyoming_openai_chatterbox gateway service for TTS-only backend
- Reorganize defaults sections for clarity (SPEACHES, wyoming_openai, chatterbox)
- Add missing variables: chatterbox_voices, stt_backend, tts_backend
- Configure STT backend separately for flexibility
- Update init-speaches to download both STT and TTS models
- Increment INVALIDATE counters to force container updates

--- a/roles/wyoming_openai/defaults/main.yml
+++ b/roles/wyoming_openai/defaults/main.yml
@@ -3,16 +3,48 @@ wyoming_openai_image: ghcr.io/roryeckel/wyoming_openai:latest
 speaches_image: ghcr.io/speaches-ai/speaches:latest-cuda
 
 wyoming_openai_container_name: wyoming-openai
+wyoming_openai_chatterbox_container_name: wyoming-openai-chatterbox
 speaches_container_name: speaches
 chatterbox_container_name: chatterbox-tts
 
-# Wyoming OpenAI Gateway (Wyoming protocol)
+# Wyoming OpenAI Gateway (Wyoming protocol) - SPEACHES (STT + TTS)
 wyoming_openai_external_port: 10300
 wyoming_openai_internal_port: 10300
+
+wyoming_uri: "tcp://0.0.0.0:{{ wyoming_openai_internal_port }}"
+wyoming_log_level: INFO
+wyoming_languages: en es fr de it pt ru ja ko ar da el fi he hi ms nl no pl sv sw tr
+
+# wyoming_openai config
+
+stt_backend: "SPEACHES"
+stt_openai_url: "http://speaches:{{ speaches_internal_port }}/v1"
+stt_model: "Systran/faster-whisper-medium"
+tts_backend: "SPEACHES"
+tts_openai_url: "http://speaches:{{ speaches_internal_port }}/v1"
+# stt_openai_url: "http://chatterbox-tts:{{ chatterbox_tts_internal_port }}/v1"
+tts_model: "systemofapwne/piper-de_DE-glados-high"
 
 # SPEACHES (Whisper STT)
 speaches_external_port: 8001
 speaches_internal_port: 8000
+
+# TTS Configuration
+# tts_voices: "default Sabine Merkel"
+tts_voices: "glados"
+tts_speed: "1.0"
+
+# wyoming_chatterbox config
+
+# Wyoming OpenAI Gateway - Chatterbox (TTS only)
+wyoming_openai_chatterbox_external_port: 10301
+wyoming_openai_chatterbox_internal_port: 10301
+wyoming_chatterbox_uri: "tcp://0.0.0.0:{{ wyoming_openai_chatterbox_internal_port }}"
+
+wyoming_chatterbox_tts_model: "chatterbox-tts-1"
+wyoming_chatterbox_tts_backend: "OPENAI"
+chatterbox_voices: "default Merkel Sabine Adolf"
+
 
 # Chatterbox TTS
 chatterbox_tts_external_port: 4123
@@ -30,18 +62,6 @@ chatterbox_voice_sample_file: "{{ config_root }}/wyoming-openai/voice-sample.mp3
 chatterbox_source_folder: "{{ config_root }}/wyoming-openai/source"
 chatterbox_frontend_build_folder: "{{ config_root }}/wyoming-openai/frontend"
 
-wyoming_uri: "tcp://0.0.0.0:{{ wyoming_openai_internal_port }}"
-wyoming_log_level: INFO
-wyoming_languages: en es fr de it pt ru ja ko ar da el fi he hi ms nl no pl sv sw tr
-
-stt_backend: "SPEACHES"
-stt_model: "Systran/faster-whisper-base"
-tts_model: "chatterbox-tts-1"
-tts_backend: "OPENAI"
-
-# TTS Configuration
-tts_voices: "default Sabine Merkel"
-tts_speed: "1.0"
 
 # Chatterbox TTS Settings
 chatterbox_exaggeration: 0.5
@@ -70,9 +90,3 @@ stt_streaming_models: "{{ stt_model }}"
 tts_streaming_models: "{{ tts_model }}"
 tts_streaming_min_words: 3
 tts_streaming_max_chars: 280
-
-device_requests:
-  - driver: nvidia
-    count: -1
-    capabilities:
-      - ["gpu"]
