feat(monitoring): add Semaphore CI/CD support
- Add semaphore configuration variables
- Deploy Semaphore container with SQLite database
- Add Semaphore service to reverse proxy
- Configured on port 3005 (external), 3000 (internal)

User: semaphore
Password: changeme (default)

Next steps:
- Fix SQLite database permissions issue
- Connect to /home/daniel/code/pi Git repository
- Create VRAM switching playbooks

--- a/group_vars/all/config.yml
+++ b/group_vars/all/config.yml
@@ -27,6 +27,7 @@ homepage_http_port: 3002
 music_assistant_http_port: 8095
 uptime_kuma_http_port: 3001
 wud_http_port: 3000
+semaphore_http_port: 3005
 vscode_http_port: 8443
 nodered_http_port: 1880
 mosquitto_address: "{{ ansible_default_ipv4.address }}"
