--- a/group_vars/all/config.yml
+++ b/group_vars/all/config.yml
@@ -70,6 +70,23 @@ llamaswap_models:
     supports_function_calling: true
     supports_vision: true
     group: swap
+  - alias: Qwen3-Coder-30B-A3B-Instruct
+    cmd: >-
+      /app/llama-server
+      -hf unsloth/Qwen3-Coder-30B-A3B-Instruct-GGUF:Q4_K_XL
+      --port ${PORT}
+      --ctx-size 32684
+      --n-gpu-layers 99
+      --threads -1
+      --temp 0.7
+      --min-p 0.0
+      --top-p 0.80
+      --top-k 20
+      --repeat-penalty 1.05
+      --jinja
+    supports_function_calling: true
+    supports_vision: false
+    group: swap
   - alias: Qwen3-30B-A3B-Instruct-2507
     cmd: >-
       /app/llama-server
