fix(caddy): use localhost for same-host services to avoid DNS dependency
When nameserver-pi is offline, Caddy was unable to reach services on the same host (homelab-nuc)
because it was trying to proxy to "homelab-nuc.lan" via DNS resolution.

Solution: Modified Caddyfile template to automatically use "localhost" for all services targeting
the current host (homelab-nuc), bypassing DNS entirely.

Changes:
- Updated Caddyfile.j2 template with smart localhost detection
- Removed crashing mcp-proxy service (using MetaMCP instead)

Result: All services now work even when nameserver-pi is offline.

Fixes 502 errors for: Open WebUI, LiteLLM UI, Homepage, Pi-hole, and all other same-host services.

--- a/roles/llm_tools/tasks/main.yml
+++ b/roles/llm_tools/tasks/main.yml
@@ -161,17 +161,18 @@
             homepage.server: "{{ inventory_hostname }}"
             homepage.container: "{{ litellm_proxy_container_name }}"
 
-        mcp-proxy:
-          image: "{{ mcp_proxy_image_custom }}"
-          container_name: "{{ mcp_proxy_container_name }}"
-          ports:
-            - "{{ mcp_proxy_service_port }}:{{ mcp_proxy_service_port }}"
-          volumes:
-            - "{{ mcp_proxy_config_full_host_path }}:/app/servers.json:ro"
-          command: "mcp-proxy --port {{ mcp_proxy_service_port }} --host 0.0.0.0 --named-server-config /app/servers.json --pass-environment"
-          restart: unless-stopped
-          networks:
-            - llm-network
+        # mcp-proxy removed - using MetaMCP instead
+        # mcp-proxy:
+        #   image: "{{ mcp_proxy_image_custom }}"
+        #   container_name: "{{ mcp_proxy_container_name }}"
+        #   ports:
+        #     - "{{ mcp_proxy_service_port }}:{{ mcp_proxy_service_port }}"
+        #   volumes:
+        #     - "{{ mcp_proxy_config_full_host_path }}:/app/servers.json:ro"
+        #   command: "mcp-proxy --port {{ mcp_proxy_service_port }} --host 0.0.0.0 --named-server-config /app/servers.json --pass-environment"
+        #   restart: unless-stopped
+        #   networks:
+        #     - llm-network
 
         open-webui:
           image: ghcr.io/open-webui/open-webui:main
@@ -203,8 +204,7 @@
           depends_on:
             litellm-proxy:
               condition: service_started
-            mcp-proxy:
-              condition: service_started
+            # mcp-proxy removed - using MetaMCP instead
 
         google-workspace-mcp:
           image: "{{ google_workspace_mcp_image }}"
