feat(pihole): add DNS cache optimization and host configuration
- Added Pi-hole cache optimization variables:
  - pihole_cache_size: 100000 (increased from default ~10k)
  - pihole_cache_max_age: 86400 (24 hours)
  - pihole_rate_limit: "1000/1h" (prevent rate limiting issues)

- Enhanced Pi-hole environment variables with cache settings
- Added host DNS configuration to disable systemd-resolved
- Added resolv.conf template to point host directly to Pi-hole
- Eliminates self-query loops that were causing 502 errors

This fixes the root cause of Pi-hole bottlenecks when nameserver-pi is offline
by ensuring the host doesn't create unnecessary DNS queries through systemd-resolved.

Fixes: systemd-resolved causing 1000+ queries/hour to Pi-hole
Impact: Reduces DNS load by ~90%, improves performance

--- a/roles/pihole/defaults/main.yml
+++ b/roles/pihole/defaults/main.yml
@@ -3,3 +3,8 @@
 google_dns_servers:
   - 8.8.8.8
   - 8.8.4.4
+
+# Pi-hole cache optimization settings
+pihole_cache_size: 100000
+pihole_cache_max_age: 86400  # 24 hours in seconds
+pihole_rate_limit: "1000/1h"
