feat: update SSH key handling and add PruneMate role - Changed SSH public key lookup from id_ed25519 to id_rsa - Added new role for PruneMate deployment - Updated services configuration to include PruneMate - Modified inventory and nameserver configurations for user consistency - Removed unused dockercleanup role and related files

--- a/group_vars/all/services.yml
+++ b/group_vars/all/services.yml
@@ -66,6 +66,12 @@ services:
     domain: changedetection.lan
     group: Monitoring
     icon: change-detection
+  prunemate:
+    name: PruneMate
+    target: homelab-nuc.lan
+    http_port: 7676
+    group: Monitoring
+    icon: mdi-docker
   n8n:
     name: n8n
     target: homelab-nuc.lan
