--- a/group_vars/nameserver.yml
+++ b/group_vars/nameserver.yml
@@ -1,5 +1,5 @@
 ---
-username: pi
+username: daniel
 dhcp_start: 192.168.50.100
 dhcp_end: 192.168.50.174
 pihole_virtual_host: pihole-nameserver.lan
