--- a/distribute_ssh_key.yml
+++ b/distribute_ssh_key.yml
@@ -5,7 +5,7 @@
   become: false
 
   vars:
-    ssh_public_key: "{{ lookup('file', '~/.ssh/id_ed25519.pub') }}"
+    ssh_public_key: "{{ lookup('file', '~/.ssh/id_rsa.pub') }}"
 
   tasks:
     - name: Read SSH public key
