--- a/distribute_ssh_key.yml
+++ b/distribute_ssh_key.yml
@@ -4,16 +4,18 @@
   gather_facts: no
   become: false
 
-  vars:
-    ssh_public_key: "{{ lookup('file', '~/.ssh/id_ed25519.pub') }}"
-
   tasks:
-    - name: Read SSH public key
-      debug:
-        msg: "Public key: {{ ssh_public_key }}"
+    - name: Read SSH public key from ailab-ubuntu
+      ansible.builtin.slurp:
+        src: ~/.ssh/id_rsa.pub
+      register: ssh_public_key_b64
+
+    - name: Set public key as fact
+      ansible.builtin.set_fact:
+        ssh_public_key: "{{ ssh_public_key_b64['content'] | b64decode }}"
 
 - name: Add SSH public key to all hosts
-  hosts: all
+  hosts: all:!winhost1
   become: yes
   gather_facts: yes
 
@@ -24,14 +26,14 @@
   tasks:
     - name: Add SSH public key to authorized_keys
       ansible.posix.authorized_key:
-        user: "{{ ansible_user_id }}"
+        user: "{{ ansible_user }}"
         state: present
         key: "{{ ssh_public_key }}"
         exclusive: no
         manage_dir: yes
-      when: ssh_public_key is defined and ansible_facts['distribution'] != 'Windows'
+      when: ssh_public_key is defined
 
     - name: Display result
       debug:
-        msg: "SSH key added to {{ inventory_hostname }} for user {{ ansible_user_id }}"
-      when: ssh_public_key is defined and ansible_facts['distribution'] != 'Windows'
+        msg: "SSH key added to {{ inventory_hostname }} for user {{ ansible_user }}"
+      when: ssh_public_key is defined
