--- a/group_vars/all/config.yml
+++ b/group_vars/all/config.yml
@@ -6,7 +6,7 @@ locale: en_US.UTF-8
 system_timezone: "Europe/Berlin"
 pip_package: python3-pip
 pip_install_packages:
-  - name: pyyaml==6.0.1
+  - name: pyyaml
   - name: docker==6.1.3
 ip_prefix: 192.168.50.
 router_ip: 192.168.50.1
